Re-adding overflow:auto to #backgroundwrap to fix black cutoff bug in Chrome

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ div#backgroundwrap {
 	width: 100%;
 	height: 100%;
 	background: url('static/img/fsi-bg-earth-large-fade.jpg') bottom center no-repeat;	
-	/*overflow: auto;*/
+	overflow: auto;
 }
 
 div.container-fluid {
